--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -156,6 +156,18 @@ variantOmicronEG51: &variantOmicronEG51
     parameter: variant
     value: "V-23JUL-01 (Omicron EG.5.1)"
 
+variantOmicronEG51: &variantOmicronXBB
+  << : *baseVariants
+  filters:
+    parameter: variant
+    value: "V-22OCT-02 (Omicron XBB)"
+
+variantOmicronEG51: &variantOmicronBA286
+  << : *baseVariants
+  filters:
+    parameter: variant
+    value: "V-23AUG-01(Omicron BA.2.86)"
+
 variantOther: &variantOther
   << : *baseVariants
   filters:
@@ -2034,6 +2046,22 @@ cards:
               metric: newWeeklyPercentage
               fill: false
 
+            - label: V-23AUG-01(Omicron BA.2.86)
+              << : *variantOmicronBA286
+              type: line
+              colour: 21
+              rollingAverage: false
+              metric: newWeeklyPercentage
+              fill: false
+
+            - label: V-22OCT-02 (Omicron XBB)
+              << : *variantOmicronXBB
+              type: line
+              colour: 21
+              rollingAverage: false
+              metric: newWeeklyPercentage
+              fill: false
+
             - label: Other
               << : *variantOther
               type: line
@@ -2153,6 +2181,22 @@ cards:
                 parameter: variant
                 value: "V-23JUL-01 (Omicron EG.5.1)"
 
+            - label: "V-23AUG-01(Omicron BA.2.86) %"
+              metric: newWeeklyPercentage
+              value: variants
+              type: numeric
+              filters:
+                parameter: variant
+                value: "V-23AUG-01(Omicron BA.2.86)"
+
+            - label: "V-22OCT-02 (Omicron XBB) %"
+              metric: newWeeklyPercentage
+              value: variants
+              type: numeric
+              filters:
+                parameter: variant
+                value: "V-22OCT-02 (Omicron XBB)"
+
             - label: "Other %"
               metric: newWeeklyPercentage
               value: variants
@@ -2180,6 +2224,12 @@ cards:
               metrics:
               - label: Other
                 value: "Other"
+
+              - label: V-22OCT-02 (Omicron XBB)
+                value: "V-22OCT-02 (Omicron XBB)"
+
+              - label: V-23AUG-01(Omicron BA.2.86)
+                value: "V-23AUG-01(Omicron BA.2.86)"
 
               - label: V-23JUL-01 (Omicron EG.5.1)
                 value: "V-23JUL-01 (Omicron EG.5.1)"
@@ -2330,6 +2380,22 @@ cards:
               filters:
                 parameter: variant
                 value: "V-23JUL-01 (Omicron EG.5.1)"
+
+            - label: "V-23AUG-01(Omicron BA.2.86) %"
+              metric: newWeeklyPercentage
+              value: variants
+              type: numeric
+              filters:
+                parameter: variant
+                value: "V-23AUG-01(Omicron BA.2.86)"
+
+            - label: "V-22OCT-02 (Omicron XBB) %"
+              metric: newWeeklyPercentage
+              value: variants
+              type: numeric
+              filters:
+                parameter: variant
+                value: "V-22OCT-02 (Omicron XBB)"
 
             - label: "Other %"
               metric: newWeeklyPercentage
